--- a/src/app/components/Showcase/style.css
+++ b/src/app/components/Showcase/style.css
@@ -11,7 +11,7 @@
     height: 100vh;
     width: 100%;
     overflow: hidden;
-    background: rgb(54, 57, 56);
+    background: rgb(60, 61, 66);
 }
 
 .case__content {
@@ -29,7 +29,7 @@
 
     & p {
         font-size: 6vh;
-    }
+      }
 }
 
 .case__bg {
@@ -46,7 +46,8 @@
     position: absolute;
     z-index: 2;
     height: 15rem;
-    inset: 60%;
+    top: 70%;
+    left: 40%;
     width: auto;
     aspect-ratio: 1/1;
     object-fit: cover;
@@ -58,7 +59,8 @@
     position: absolute;
     z-index: 2;
     height: 15rem;
-    inset: 70%;
+    left: 55%;
+    top: 67%;
     width: auto;
     aspect-ratio: 1/1;
     object-fit: cover;
