--- a/src/app/components/Projects/style.css
+++ b/src/app/components/Projects/style.css
@@ -33,8 +33,10 @@
 .project__teaser {
     position: absolute;
     z-index: 2;
+    top: -2.5rem;
     height: 12rem;
     aspect-ratio: 1/1;
     opacity: 0;
     transition: all 0.2s ease-out;
+    pointer-events: none;
 }
