--- a/src/app/components/Showcase/style.css
+++ b/src/app/components/Showcase/style.css
@@ -2,16 +2,20 @@
     height: fit-content;
     display: flex;
     flex-direction: column;
-    gap: 6.2rem;
+    gap: 3rem;
     padding-bottom: 2rem;
 }
 
 .case {
     position: relative;
-    height: 100vh;
+    height: 50vh;
     width: 100%;
     overflow: hidden;
-    background: rgb(60, 61, 66);
+    background: yellowgreen;
+}
+
+.case:first-of-type{
+    background: rgb(232, 107, 239);
 }
 
 .case__content {
@@ -24,22 +28,12 @@
     gap: 2.5rem;
 
     & h2 {
-        font-size: 18vh;
+        font-size: 10vh;
     }
 
     & p {
-        font-size: 6vh;
-      }
-}
-
-.case__bg {
-    position: absolute;
-    z-index: 1;
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    filter: grayscale(30%);
-    padding: 1rem;
+        font-size: 5vh;
+    }
 }
 
 .case__image {
